# Password-Manager

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/: project layout.txt
docs/: Documentation.txt  UML_Password-Manager.drawio  project layout.txt
gui/: MainWindow.cpp  MainWindow.h
src/: main.cpp
